# mcap-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: format.yml  test.yml
mcap_manager/: __init__.py  cli.py  config.py  mcap_utils.py  merge.py  query.py  utils.py
tests/: conftest.py  test_cli.py  test_mcap_utils.py  test_merge.py  test_multiple_topic_files.py  test_query.py  test_transient_messages.py  test_utils.py
